--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "expo": {
-    "name": "Cut Logger",
-    "slug": "cut-logger",
-    "scheme": "cutlogger",
-    "platforms": ["ios", "android", "web"],
-    "web": {
-      "bundler": "metro",
-      "display": "standalone",
-      "themeColor": "#0B0F14"
-    }
+  "name": "cut-tracker",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.0",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
